kvalobs (7.1.1-1) noble; urgency=medium
  * kvDataInputd
    - Removed the autoobs decoder

 -- Borge Moe <borge.moe@met.no>  Tue, 25 Nov 2025 12:00:00 +0100

kvalobs (7.1.0-1) noble; urgency=medium
  * Bigfix for workque.

 -- Borge Moe <borge.moe@met.no>  Tue, 1 Apr 2025 15:00:00 +0100

kvalobs (7.0.5-1) noble; urgency=medium
  * Build for noble.

 -- Borge Moe <borge.moe@met.no>  Tue, 14 Jan 2025 08:00:00 +0100

kvalobs (7.0.5-1) focal; urgency=medium
  * kvQabased
    - Add parameters observation_stationid and observation_typeid to the perl scripts.
    - Add variables to give typeid for the parameter to the perl scripts. Ex. my $X_typeid=312.
    - Use sensor and typeid when setting up metadata for the checks. 

 -- Borge Moe <borge.moe@met.no>  Tue, 27 Jul 2024 08:00:00 +0200

kvalobs (7.0.4-1) focal; urgency=medium
  * Fix station filter. 

 -- Borge Moe <borge.moe@met.no>  Mon, 15 Apr 2024 08:00:00 +0200

kvalobs (7.0.3-1) focal; urgency=medium
  * Add tbtime to the table model_data.

 -- Borge Moe <borge.moe@met.no>  Tue, 2 Apr 2024 07:00:00 +0200

kvalobs (7.0.2-1) focal; urgency=medium
  * Only container build changes.

 -- Borge Moe <borge.moe@met.no>  Mon, 11 Mar 2023 07:00:00 +0100


kvalobs (7.0.1-1) focal; urgency=medium
  * miconfig: Allow the char '-' in ids.
  * Uppgrade rdkafka to version 1.9.0.
  * kvDataInputd
    - Better tracing of log messages between logs.
    - Add optional messageid to all decoders.
  * kvQaBased
    - DataProcessor: Logg kafka error also to the stadard log so it is logged to stderr.
    - exit the processe when we have retried to send to kafka 10 times. The process must
      be restarted by some means. 

-- Borge Moe <borge.moe@met.no>  Thu, 9 Mar 2023 07:00:00 +0100



kvalobs (7.0.1a-1) jammy; urgency=medium
  * Rebuild for focal

 -- Borge Moe <borge.moe@met.no>  Thu, 2 Mar 2023 15:00:00 +0200


kvalobs (7.0.1-1) jammy; urgency=medium
  * Rebuild for jammy
