@@ -3,18 +3,17 @@ Section: science
 Priority: extra
 Maintainer: Borge Moe <borge.moe@met.no>
 Build-Depends: debhelper, autotools-dev, autoconf-archive, debconf, devscripts, fakeroot,
-  build-essential, automake, libtool, gfortran, bison, flex, sqlite3,
+  build-essential, automake, libtool, gfortran, bison, flex, sqlite3, g++-14, libstdc++-14-dev,
   libpq-dev, python3, cmake, google-mock, libgmock-dev, libgtest-dev,
-  libboost-date-time-dev, libboost-filesystem-dev, libboost-thread-dev, 
+  libboost-date-time-dev, libboost-filesystem-dev, libboost-thread-dev,
   libboost-regex-dev, libboost-program-options-dev, libboost-system-dev,
-  libboost-timer-dev, libboost-dev, 
+  libboost-timer-dev, libboost-dev,
   libc6-dev, libcurl4-gnutls-dev, libglibmm-2.4-dev,
   libmicrohttpd-dev, omniidl, libomniorb4-dev, libomnithread4-dev, libsasl2-dev,
-  libssl-dev ,libstdc++-13-dev, libxml++2.6-dev, libxml2-dev, libzstd-dev, zlib1g-dev,
+  libssl-dev, libxml++2.6-dev, libxml2-dev, libzstd-dev, zlib1g-dev,
   librdkafka-dev, metlibs-putools-dev,
   libperl-dev, libdbd-pg-perl, liblog4cpp5-dev, libcppunit-dev,
   libgnutls28-dev
-
 
 Package: libkvalobs10
 Section: libs
