@@ -19,7 +19,7 @@ override_dh_auto_configure: pre-build configure-stamp
 configure-stamp:  pre-build 
 #	autoreconf -i
 #We are disabling tests in the debian package build
-	CXXFLAGS=-g ./configure --prefix=/usr  --without-gmock \
+	CFLAGS=-g CC=gcc-14 CXXFLAGS=-g CXX=g++-14 ./configure --prefix=/usr  --without-gmock \
 	    --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info  \
 	    --localstatedir=/var --sysconfdir=/etc \
 	    --with-boost-libdir=/usr/lib/x86_64-linux-gnu
