@@ -11,8 +11,8 @@ COPY . /src
 COPY GITREF /usr/share/kvalobs/VERSION
 
 RUN --mount=type=cache,target=/build cd /src/ && autoreconf -if && cd /build && \
-      /src/configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info  \
-	    --localstatedir=/var --sysconfdir=/etc  \
+      CC=gcc-14 CXX=g++-14 /src/configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info  \
+      --localstatedir=/var --sysconfdir=/etc  \
       CFLAGS=-g && make && make install
 
 ENTRYPOINT [ "/bin/bash"]
